# CEN

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MVP Development Guide_AI Concierge for Community Equity Navigators.md  Prompt.md  README.md  index.html  pyproject.toml  render.yaml
.claude/skills/commit/: SKILL.md
.claude/skills/summarize/: SKILL.md
api/: main.py
assets/: index-CmjNeSWI.css  index-eLqtQZQm.js
core/: aop_parser.py  engine.py  models.py
docs/: actions.md  additions.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DAGViewer.tsx  Layout.tsx  ModuleSelector.tsx  NodeBadge.tsx  ResultPanel.tsx  StatusBar.tsx  WorkflowForm.tsx
local_llm/: tlm.py
modules/: charity_care_navigator.json
src/cen/: __init__.py  config.py
src/cen/api/: app.py  dependencies.py
src/cen/core/: aop_parser.py  audit_export.py  audit_store.py  engine.py  exceptions.py  models.py  session_store.py
src/cen/llm/: base.py  factory.py  gguf.py  mock.py  openai_compat.py
src/cen/modules/: benefits_enrollment_navigator.json  charity_care_navigator.json  community_resource_router.json  debt_cancellation_engine.json  insurance_appeal_assistant.json
tests/: conftest.py
tests/api/: test_health.py  test_sessions.py  test_workflows.py
tests/core/: test_aop_parser.py  test_audit_export.py  test_audit_store.py  test_engine.py  test_session_store.py
tests/llm/: test_factory.py  test_openai_compat.py
tests/modules/: test_all_modules_valid.py
tests/privacy/: test_pii_scrubber.py
(+12 files in other folders)
